--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "expo": "~42.0.1",
@@ -19,6 +20,7 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "husky": "^7.0.2",
     "typescript": "~4.0.0"
   },
   "private": true
