--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "lint": "eslint .",
+    "lint:fix": "yarn lint --fix",
+    "typecheck": "tsc --project tsconfig.json --noEmit",
+    "typecheck:pretty": "yarn typecheck --pretty"
   },
   "dependencies": {
     "expo": "~42.0.1",
@@ -20,7 +24,18 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.26.1",
     "husky": "^7.0.2",
+    "prettier": "^2.4.1",
     "typescript": "~4.0.0"
   },
   "private": true
