--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "react/prop-types": "off",
     "no-use-before-define": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "camelcase": "off"
+    "camelcase": "off",
+    "@typescript-eslint/no-namespace": "off"
   }
 }
