feat: add package to build apk

--- a/app.json
+++ b/app.json
@@ -15,13 +15,15 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.vitorserrano.tonstore"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#36E61A"
-      }
+      },
+      "package": "com.vitorserrano.tonstore"
     },
     "web": {
       "favicon": "./assets/favicon.png"
